Demo how to re-use compiler